--- a/composer.json
+++ b/composer.json
@@ -3,17 +3,11 @@
   "description": "Notification user in live environment",
   "type": "magento2-module",
   "version": "1.0.0",
+  "homepage": "https://github.com/wallacehao/testliveaccount/tree/master/Hao/LiveAccount",
   "license": [
     "OSL-3.0",
     "AFL-3.0"
   ],
- 
-  "extra": {
-    "map": [
-      [
-        "*",
-        "Hao/LiveAccount"
-      ]
-    ]
-  }
+   "require": {
+    },
 }
